<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>

    <!-- Speed Units -->

    <ListPreference

        android:key="speed_unit"
        android:title="@string/speed_unit"
        android:entries="@array/speed_units"
        android:entryValues="@array/speed_units_values"
        android:dependency="@string/speed_unit_key"
    />


    <!-- Temperature Units -->

    <ListPreference

        android:key="temperature_unit"
        android:title="@string/temperature_unit"
        android:entries="@array/temperature_units"
        android:entryValues="@array/temperature_units_values"
        android:dependency="@string/temperature_unit_key"
    />

</PreferenceScreen>