<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
>

    <item
        android:id="@+id/action_more"
        android:title="@string/action_more"
        android:orderInCategory="100"
        android:icon="@drawable/ic_dots"
        app:showAsAction="always"
    >

        <menu>

            <!-- Settings -->

            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"/>

            <!-- About -->

            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"
            />

        </menu>

    </item>


</menu>



