<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/overlay_weather_status_forecast"

    />

    <!-- Weather Description -->

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/view_description_margin_left"
        android:paddingRight="@dimen/view_description_margin_right"
    >

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/day"
        />


        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/day"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/view_temperature_margin_top"
            android:text="@string/temperature"
        />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/day"
            android:layout_alignBaseline="@id/temperature"
            android:text="@string/condition"
        />

        <!--
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_divider_height"
            android:layout_alignParentBottom="true"
            android:background="@color/medium_gray"
        />
        -->

    </RelativeLayout>

</LinearLayout>